manifests/cosmos/pisco/horcrux-stateful.yaml
#
apiVersion: apps/v1
kind: StatefulSet
metadata:
    name: pisco-horcrux
    namespace: cosmos 
spec:
    serviceName: pisco-horcrux
    replicas: 3
    selector:
        matchLabels:
            app: pisco-horcrux
    template:
        metadata:
            labels:
                app: pisco-horcrux
                kind-of: horcrux 
        spec:
            affinity:
              # place the horcrux in the same zone as the sentry
              podAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                - labelSelector:
                    matchExpressions:
                    - key: app.kubernetes.io/name
                      operator: In
                      values:
                      - pisco
                  topologyKey: "zone"
              # don't put two horcruxs in the same zone
              podAntiAffinity:
                  requiredDuringSchedulingIgnoredDuringExecution:
                  - labelSelector:
                      matchExpressions:
                      - key: app
                        operator: In
                        values:
                        - pisco-horcrux
                    topologyKey: "zone"
            containers:
                - name: horcrux-container
                  image: ghcr.io/pfc-developer/horcrux-container:0.07
                  command: ["/bin/launch.sh","pisco-1"]
                  ports:
                    - containerPort: 2222
                      name: cosigner
                    - containerPort: 6001
                      name: prometheus   
                  volumeMounts:
                    - name: signer                    
                      mountPath: /run/sign                      
            volumes:  
                  - name: signer-1
                    secret:
                      secretName: pisco-signer-1
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: signer-2
                    secret:
                      secretName: pisco-signer-2
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: signer-3
                    secret:
                      secretName: pisco-signer-3
                      items: 
                      - key: signer
                        path: ecies.json
                        mode: 511
                  - name: shard-1
                    secret:
                      secretName: pisco-shard-1
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
                  - name: shard-2
                    secret:
                      secretName: pisco-shard-2
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
                  - name: shard-3
                    secret:
                      secretName: pisco-shard-3
                      items: 
                      - key: SHARD
                        path: shard.json
                        mode: 511
    volumeClaimTemplates:
    - metadata:
        name: signer
      spec:
        accessModes: [ "ReadWriteOnce" ]
        storageClassName: ssd-persistent-block-store
        resources:
          requests:
            storage: 10Mi
