manifests/cosmos/pisco/headless-service-horcrux.yaml
apiVersion: v1
kind: Service
metadata:
  name: pisco-horcrux
  namespace: cosmos
spec:
  selector:
    app: pisco-horcrux
  clusterIP: None
  ports:
  - protocol: TCP
    port: 26660
    targetPort: 26660
