manifests/cosmos/pisco/headless-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pisco
  namespace: cosmos
spec:
  selector:
    app.kubernetes.io/name: pisco
  clusterIP: None
  ports:
  - protocol: TCP
    port: 1234
    targetPort: 1234
