manifests/cosmos/pisco/ingress.yaml
# Please edit the object below. Lines beginning with a '#' will be ignored,
# and an empty file will abort the edit. If an error occurs while saving this file will be
# reopened with the relevant failures.
#
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: rpc.pisco.yieldpay.finance     
    nginx.ingress.kubernetes.io/enable-cors: "true"
   # nginx.ingress.kubernetes.io/configuration-snippet: |
   #   add_header Access-Control-Allow-Headers * always;
 
  labels:
    app.kubernetes.io/name: pisco-rpc
    app.kubernetes.io/version: 1.0.0
  name: pisco-rpc
  namespace: cosmos
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - rpc.pisco.yieldpay.finance
    secretName: rpc-pisco-tls-secret
  rules:
  - host: rpc.pisco.yieldpay.finance
    http:
      paths:
      - backend:
          service:
            name: pisco-rpc
            port:
              number: 26657
        path: /
        pathType: Prefix
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    external-dns.alpha.kubernetes.io/hostname: api.pisco.yieldpay.finance    
  labels:
    app.kubernetes.io/name: pisco-api
    app.kubernetes.io/version: 1.0.0
  name: pisco-api
  namespace: cosmos
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - api.pisco.yieldpay.finance
    secretName: api-pisco-tls-secret
  rules:
  - host: api.pisco.yieldpay.finance
    http:
      paths:
      - backend:
          service:
            name: pisco-rpc
            port:
              number: 1317
        path: /
        pathType: Prefix
